Project

General

Profile

Actions

Bug #53464

closed

pubsub: list topics, radosgw coredump

Added by zhipeng li over 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

100%

Source:
Community (dev)
Tags:
notifications
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

when using postman sending the request follow to list topics associated with a tenant. coredump

GET /topics

[root@node106 ceph]# ceph crash ls
2021-12-02T08:32:43.236812Z_ec89d2d3-43ad-4102-8bf4-b232b9e8552c client.rgw.node106.rgw1 *
2021-12-02T09:01:45.964257Z_97da47d7-6020-4644-b50f-6cdd1ca6a46b client.rgw.node106.rgw1 *
2021-12-02T09:10:30.242906Z_ebc5ffbf-483f-46e3-ad1e-b7ef8c82e181 client.rgw.node106.rgw1 *

[root@node106 ceph]# ceph crash info 2021-12-02T09:10:30.242906Z_ebc5ffbf-483f-46e3-ad1e-b7ef8c82e181 {
"backtrace": [
"/lib64/libpthread.so.0(+0x12c20) [0x7f7270220c20]",
"(RGWHandler_REST_PSTopic::op_get()+0x1d) [0x7f727b2a16cd]",
"(RGWHandler_REST::get_op()+0x86) [0x7f727b397296]",
"(process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSocket*, optional_yield, rgw::dmclock::Scheduler*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::chrono::duration<unsigned long, std::ratio<1l, 1000000000l> >, int*)+0xa62) [0x7f727afb8c42]",
"/home/ceph-16.2.6/build/lib/libradosgw.so.2(+0x4a8b6e) [0x7f727af10b6e]",
"/home/ceph-16.2.6/build/lib/libradosgw.so.2(+0x4aa424) [0x7f727af12424]",
"/home/ceph-16.2.6/build/lib/libradosgw.so.2(+0x4aa66a) [0x7f727af1266a]",
"make_fcontext()"
],
"ceph_version": "16.2.6",
"crash_id": "2021-12-02T09:10:30.242906Z_ebc5ffbf-483f-46e3-ad1e-b7ef8c82e181",
"entity_name": "client.rgw.node106.rgw1",
"os_id": "centos",
"os_name": "CentOS Linux",
"os_version": "8",
"os_version_id": "8",
"process_name": "radosgw",
"stack_sig": "15e9ba844c3f16e587191a74c986a43e4897e6a1601238d40eb724a6860c31d7",
"timestamp": "2021-12-02T09:10:30.242906Z",
"utsname_hostname": "node106",
"utsname_machine": "x86_64",
"utsname_release": "4.18.0-240.el8.x86_64",
"utsname_sysname": "Linux",
"utsname_version": "#1 SMP Fri Sep 25 19:48:47 UTC 2020"
}

ceph version 16.2.x


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #53518: pacific: pubsub: list topics, radosgw coredumpResolvedCory SnyderActions
Actions #1

Updated by Casey Bodley over 2 years ago

  • Assignee set to Yuval Lifshitz
Actions #2

Updated by zhipeng li over 2 years ago

Actions #3

Updated by Yuval Lifshitz over 2 years ago

  • Status changed from New to Fix Under Review
  • Source set to Community (dev)
  • Tags set to notifications
  • Backport set to pacific
  • Pull request ID set to 44186
Actions #4

Updated by Yuval Lifshitz over 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot over 2 years ago

  • Copied to Backport #53518: pacific: pubsub: list topics, radosgw coredump added
Actions #6

Updated by Backport Bot over 1 year ago

  • Tags changed from notifications to notifications backport_processed
Actions #7

Updated by Konstantin Shalygin over 1 year ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
  • Tags changed from notifications backport_processed to notifications
Actions

Also available in: Atom PDF