rgw: add object null point judging when listing pubsub  topics Fixs: https://tracker.ceph.com/issues/53464

Signed-off-by: zhipeng li <qiuxinyidian@gmail.com>
(cherry picked from commit 9bec1829483f4f724c08afbe640e6d8383579348)